# ZPG_Project

./: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraLight.cpp  CameraLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Shape.h  Sphere.cpp  Sphere.h  Square.h  Transformation.cpp  Transformation.h  Triangle.h  kub0679.txt  main.cpp
Composite/: Composite.h  killmeplease.cpp  killmeplease.h
Composite/Transformation/: Bezier.cpp  Bezier.h  Move.cpp  Move.h  Rotation.cpp  Rotation.h  Scale.cpp  Scale.h  Transformation.cpp  Transformation.h
Factory/: ModelFactory.cpp  ModelFactory.h
Models/: CubemapModel.cpp  CubemapModel.h  Model.cpp  Model.h  ModelVerticesHolder.cpp  ModelVerticesHolder.h  ModelVisitor.cpp  ModelVisitor.h  NoTextureModel.cpp  NoTextureModel.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  TextureModel.cpp  TextureModel.h  Triangle.cpp  Triangle.h  skycube.h  sphere.h  texturedPlain.h
Models/Sources/: wooden_chair.blend
Observer/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
Observers/: Observer.h
Scenes/: Scenes.cpp  Scenes.h  Scenes_07.cpp  Scenes_07.h  Scenes_08.cpp  Scenes_08.h
Shaders/: Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramHolder.cpp  ShaderProgramHolder.h
Shaders/Sources/: BasicTexture.frag  BasicTexture.vert  blinn.frag  blinn.vert  constant.frag  constant.vert  cubemap.frag  cubemap.vert  gradient.frag  gradient.vert  lambert.frag  lambert.vert  main.vert  phong.frag  phong.vert
Textures/: CubemapTexture.cpp  CubemapTexture.h  Texture.cpp  Texture.h  TextureHolder.cpp  TextureHolder.h
libs/soil/include/: test_SOIL.cpp
libs/soil/include/SOIL/: SOIL.c
